--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!--[if IE]><p class="kill-ie">微软都放弃了IE，为啥你却还不放弃？</p><![endif]-->
-<a class=pdf href=resume.pdf><i class="iconfont icon-pdf"></i> PDF简历</a>
+<!-- <a class=pdf href=resume.pdf><i class="iconfont icon-pdf"></i> PDF简历</a> -->
 <p class=last-modified>最后更新时间：2017年12月</p>
 <div class=content>
     <div class=content-bd>
