--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </header>
                         <div class=item-bd>
                             <p class=section-content><strong>iOS开发</strong>
-                                影票板块是掌上生活客户端上的一个在线选座平台。项目采用MVC模式，实现了项目的良好架构设计，产品上线后不断的维护与重构，优化用户体验及性能
+                                影票板块是掌上生活客户端上的一个在线选座平台。主要负责客户端70%的基本功能模块的开发；负责各模块持续改进、用户体验已知 BUG 的修复；跟后端确认接口，并参加前后端的联调工作
                             </p>
                         </div>
                     </div>
