--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!--[if IE]><p class="kill-ie">微软都放弃了IE，为啥你却还不放弃？</p><![endif]-->
-<!-- <a class=pdf href=resume.pdf><i class="iconfont icon-pdf"></i> PDF简历</a> -->
+<a class=pdf href=resume.pdf><i class="iconfont icon-pdf"></i> PDF简历</a>
 <p class=last-modified>最后更新时间：2017年12月</p>
 <div class=content>
     <div class=content-bd>
@@ -46,7 +46,7 @@
                         <div class=item-bd>
                             <p class=section-content>
                                 <strong>移动开发部-iOS开发工程师</strong>
-                                配合部门经理确定开发周期与计划，独立完成美味七七iOS客户端开发，上线后不断的维护与优化
+                                配合部门经理确定开发周期与计划，独立完成美味七七iOS客户端开发，上线后不断的维护与优化。
                             </p>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                         <div class=item-bd>
                             <p class=section-content><strong>iOS开发工程师</strong>
                             1、主要负责掌上生活影票旧系统的代码重构及日常迭代开发工作；
-                            2、同时参与手机银行影票H5页面的开发工作及后台管理页面的开发部分开发工作；
+                            2、同时参与手机银行影票H5页面的开发工作及后台管理页面的开发部分开发工作。
                             </p>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                         </header>
                         <div class=item-bd>
                             <p class=section-content><strong>iOS开发</strong>
-                                影票板块是掌上生活客户端上的一个在线选座平台。主要负责客户端70%的基本功能模块的开发；负责各模块持续改进、用户体验已知 BUG 的修复；跟后端确认接口，并参加前后端的联调工作
+                                影票板块是掌上生活客户端上的一个在线选座平台。主要负责客户端70%的基本功能模块的开发；负责各模块持续改进、用户体验已知 BUG 的修复；跟后端确认接口，并参加前后端的联调工作。
                             </p>
                         </div>
                     </div>
@@ -95,8 +95,8 @@
                         <div class=item-bd>
                             <p class=section-content>
                                 <strong>H5开发</strong>
-                                参与招商银行客户端影票板块的部分页面开发工作，利用了<em>HTML5</em>、<em>CSS3</em>、<em>Sass</em>、<em>Iconfont</em>、<em>rem自适应</em>等技术来丰富展示前端界面，采用了<em>Vue.js</em>做为<em>MVVM框架</em>，
-                                使用<em>BaiduTemplate</em>做为模板引擎进行数据逻辑处理，通过<em>Ajax</em>与后端进行数据交互，实现了大量的前后端分离，以及复杂的业务逻辑。
+                                招商银行客户端影票板块是一个在线选座平台，
+                                参与基于Vue.js框架重构的部分页面开发工作，包括：全部影片页、影院页、优惠券等页面的开发。
                             </p>
                         </div>
                     </div>
@@ -214,20 +214,20 @@
             <section class=contact>
                 <ul>
                     <li>
-                        <a href=http://toadw.cn target=_blank>
+                        <a href=www.whbsspu.cn target=_blank>
                             <i class="iconfont icon-homepage"></i>
-                            <span class=contact-link>whbsspu.com</span>
+                            <span class=contact-link>www.whbsspu.cn</span>
                         </a>
                     </li>
                     <li>
-                        <a href=https://github.com/toadwoo target=_blank>
+                        <a href=https://github.com/whbsspu target=_blank>
                             <i class="iconfont icon-github"></i>
                             <span class=contact-link>github.com/whbsspu</span>
 
                         </a>
                     </li>
                     <li>
-                        <a href=mailto:toadwoo@foxmail.com target=_blank>
+                        <a href=mailto:963617710@qq.com target=_blank>
                             <i class="iconfont icon-email"></i>
                             <span class=contact-link>963617710@qq.com</span>
 
@@ -244,11 +244,11 @@
         </header>
 
     </div>
-    <footer class=print-footer>
+    <!-- <footer class=print-footer>
         <a class=footer-link href=http://resume.toadw.cn target=_blank><i class="iconfont icon-link"></i> 网页版简历：resume.toadw.cn</a>
-    </footer>
+    </footer> -->
 </div>
-<footer class=github-footer><a class=footer-link href=https://github.com/toadwoo/resume target=_blank><i class="iconfont icon-link"></i> github.com/toadwoo/resume</a>
+<footer class=github-footer><a class=footer-link icon-link">www.whbsspu.cn</a>
 </footer>
 
 </body>
