--- a/index.html
+++ b/index.html
@@ -155,12 +155,11 @@
 		                    <li><p class=section-content><i class="iconfont icon-dot"></i>熟练使用AFN，SDWebImage，JSPatch等第三方框架</p></li>
 
 		                    <li><p class=section-content><i class="iconfont icon-dot"></i>熟悉SQLite数据存储技术，熟悉本地数据缓存</p></li>
-		                    <li><p class=section-content><i class="iconfont icon-dot"></i>熟悉主流SDK的使用：友盟分享，百度地图，支付宝等</p></li>
 		                    <li><p class=section-content><i class="iconfont icon-dot"></i>熟练使用Git、SVN源代码管理器</p></li>
 		                    <li><p class=section-content><i class="iconfont icon-dot"></i>熟练掌握JSPatch等热修复技术</p></li>
-
-                        <li><p class=section-content><i class="iconfont icon-dot"></i>熟悉使用HTML5、CSS</p></li>
-                        <li><p class=section-content><i class="iconfont icon-dot"></i>了解Vue、微信小程序</p></li>
+                        <li><p class=section-content><i class="iconfont icon-dot"></i>精通前端基本技术，包括HTML/CSS/JavaScript/jQuery/Bootstrap等</p></li>
+                        <li><p class=section-content><i class="iconfont icon-dot"></i>熟练掌握Vue.js、React等前端框架</p></li>
+                        <li><p class=section-content><i class="iconfont icon-dot"></i>熟练掌握微信小程序开发</p></li>
                     </ul>
                 </div>
             </section>
